# Perception-Lidar-ROI

./: .gitignore
src/euclidean_clustering/: package.xml  setup.cfg  setup.py
src/euclidean_clustering/config/: benchmark_results_bag.json  params.yaml
src/euclidean_clustering/lidarpipeline/: BasicBoundsFilter.py  ConeClassifier.py  EuclideanClustering.py  Filter.py  KdTree.py  KdTreeUNSORTED.py  LUTBoundingBoxFilter.py  PizzaSliceFilter.py  lidar_processor_node.py
src/euclidean_clustering/lidarpipeline/recordings/: timings_box.csv  timings_lut_basic.csv  timings_lut_new.csv  timings_pizza.csv
src/euclidean_clustering/resource/: euclidean_clustering
