<?xml version="1.0"?>
<package format="3">
  <name>euclidean_clustering</name>
  <version>0.0.0</version>
  <description>Lidar filtering and euclidean clustering with box, pizza-slice, and LUT filters.</description>

  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
